@@ -1,5 +1,16 @@
 2000-12-01  Bruno Haible  <haible@clisp.cons.org>
 
+        * src/iconv.c: Include <fcntl.h>. Define fallbacks for setmode, fileno.
+          (force_binary): New variable.
+          (convert): If requested, set the input O_BINARY.
+          (main): Accept --binary option. If requested, set the output O_BINARY.
+        * tests/check-stateful.bat: Pass --binary to iconv.
+        * tests/check-stateful.cmd: Likewise.
+        * tests/check-translit.bat: Likewise.
+        * tests/check-translit.cmd: Likewise.
+
+2000-12-01  Bruno Haible  <haible@clisp.cons.org>
+
         * include/iconv.h.in (_libiconv_version): New declaration.
         * lib/iconv.c (_libiconv_version): New variable.
 
